--- a/LegoApp/Base.lproj/Main.storyboard
+++ b/LegoApp/Base.lproj/Main.storyboard
@@ -22,10 +22,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UyF-tO-xZy">
-                                <rect key="frame" x="190" y="240" width="34" height="30"/>
-                                <state key="normal" title="Start"/>
+                                <rect key="frame" x="192" y="240" width="30" height="30"/>
+                                <state key="normal" title="Up"/>
                                 <connections>
-                                    <action selector="startButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Sbj-4U-4NU"/>
+                                    <action selector="upButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Sbj-4U-4NU"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hxc-qo-PMS">
@@ -33,6 +33,13 @@
                                 <state key="normal" title="Stop"/>
                                 <connections>
                                     <action selector="stopButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="v8Q-WD-3jM"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0z3-PE-agA">
+                                <rect key="frame" x="188" y="360" width="39" height="30"/>
+                                <state key="normal" title="Down"/>
+                                <connections>
+                                    <action selector="downButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bUq-TF-dgM"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -43,6 +50,8 @@
                             <constraint firstItem="UyF-tO-xZy" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="R6p-NL-wxT"/>
                             <constraint firstItem="hxc-qo-PMS" firstAttribute="top" secondItem="UyF-tO-xZy" secondAttribute="bottom" constant="31" id="UcU-t2-PBF"/>
                             <constraint firstItem="IFI-Yf-nit" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="112" id="ape-zC-z82"/>
+                            <constraint firstItem="0z3-PE-agA" firstAttribute="top" secondItem="hxc-qo-PMS" secondAttribute="bottom" constant="29" id="bHg-v4-wpg"/>
+                            <constraint firstItem="0z3-PE-agA" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="jqH-jJ-5SZ"/>
                             <constraint firstItem="IFI-Yf-nit" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="uun-O4-QPZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
